config integration test plugin
Signed-off-by: aminchegeni <amin.cheegeni@gmail.com>